Organizando estruturas de pastas

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\wande\\OneDrive\\Documentos\\GitHub\\professora-emanoela\\html\\index.html"
+            "file": "C:/Users/Wanderson/Documents/GitHub/professora-emanoela/html/index.html"
         }
     ]
 }
